# vesuvius-gui

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  vesuvius-segments-2024-09-26.json.zst  vesuvius-segments-2024-10-31.json.zst  vesuvius-segments-2024-11-27.json.zst  vesuvius-segments-2025-02-13.json.zst  vesuvius-segments-2025-06-03.json.zst
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: app.rs  downloader.rs  lib.rs  main.rs  model.rs  volume.rs
src/catalog/: mod.rs  obj_repository.rs
src/gui/: app.rs  mod.rs  volume_pane.rs
src/volume/: empty.rs  generic.rs  grid500.rs  interpolated.rs  layers.rs  mod.rs  objvolume.rs  overlay.rs  ppmvolume.rs  rgb.rs  transform.rs  volume64x4.rs
src/volumes/: empty.rs  mod.rs
src/zarr/: blosc.rs  mod.rs  ome.rs  test.rs
