[package]
name = "vesuvius-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow          = { version = "1" }
async-recursion = { version = "1" }
base64          = { version = "0.22" }
clap            = { version = "4", features = [ "derive" ] }
derive_more     = { version = "1", features = [ "debug" ] }
directories     = { version = "6" }
eframe          = { version = "0.30", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    #"default_fonts", # Embed the default egui fonts.
    "x11", "wayland",
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui            = { version = "0.30" }
egui_extras     = { version = "0.30", features = [ "all_loaders" ] }
ehttp           = { version = "0.5", features = ["native-async"] }
emath           = { version = "0.30"}
futures         = { version = "0.3" }
image           = { version = "0.25", default-features = false, features = ["png", "tiff", "jpeg"] }
imageproc       = { version = "0.25", default-features = false }
indicatif       = { version = "0.17", features = ["rayon"]}
itertools       = { version = "0.14" }
libm            = { version = "0.2" }
log             = { version = "0.4" }
lz4-compression = { version = "0.7" }
num_cpus        = { version = "1" }
rayon           = { version = "1" }
regex           = { version = "1", default-features=false, features = ["unicode-perl"] }
ruzstd          = { version = "0.8" }
serde           = { version = "1", features = ["derive"] }
serde_json      = { version = "1" }
sha2            = { version = "0.10" }
tiff            = { version = "0.9" }
tokio           = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync" ]}
wavefront_obj   = { version = "11.0" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11", default-features = false, features = [] }
memmap     = { version = "0.7" }

[profile.release-with-debug]
inherits = "release"
